--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 body header {
   width: 100%;
   height: 50vh;
+  padding-right: 10px;
   background-color: #665fee;
   background: linear-gradient(45deg, #665fee 0%, #27c2de 100%);
   -webkit-clip-path: polygon(0 0, 100% 0%, 260% 35%, 0 88%);
@@ -96,6 +97,9 @@ body header .header-nav nav li a {
 }
 
 body main {
+  width: 100%;
+  height: 100%;
+  margin-top: -40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,7 +110,7 @@ body main {
 }
 
 body main .main-text {
-  margin: 10px 20px;
+  padding: 30px;
 }
 
 body main .main-text h2 {
@@ -133,7 +137,6 @@ body .main-form {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 50vh;
   margin: 20px 20px;
 }
 
@@ -145,9 +148,9 @@ body .main-form form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 362px;
-  height: 260px;
-  padding: 20px;
+  width: 80%;
+  height: 325px;
+  padding: 10px;
   background-color: white;
   -webkit-box-shadow: 0px 4px 16px 0px #00000029;
           box-shadow: 0px 4px 16px 0px #00000029;
@@ -157,9 +160,55 @@ body .main-form form h2 {
   font-size: 1.3em;
   color: grey;
   text-align: center;
+  margin-bottom: 11px;
 }
 
-body .main-form form label {
-  font-family: 'Open Sans';
+body .main-form form input {
+  font-family: 'Montserrat';
+  background-color: #dfdfdf;
+  -webkit-box-shadow: 0px 2px 10px 0px #00000029;
+          box-shadow: 0px 2px 10px 0px #00000029;
+  border: none;
+  padding: 6px;
+  border-radius: 2px;
+}
+
+body .main-form form select {
+  font-family: 'Montserrat';
+  background-color: #dfdfdf;
+  -webkit-box-shadow: 0px 2px 10px 0px #00000029;
+          box-shadow: 0px 2px 10px 0px #00000029;
+  border: none;
+  padding: 6px;
+  border-radius: 2px;
+}
+
+body .main-form form button {
+  border: none;
+  background-color: #1d82ff;
+  color: white;
+  font-family: 'Montserrat';
+  font-size: 0.9em;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+          box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+  margin-top: 35px;
+  padding: 8px;
+}
+
+@media (min-width: 320px) and (max-width: 375px) {
+  body header {
+    height: 100vh;
+    -webkit-clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+            clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+  }
+}
+
+@media (min-width: 425px) and (max-width: 768px) {
+  body header {
+    height: 75vh;
+    -webkit-clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+            clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+  }
 }
 /*# sourceMappingURL=style.css.map */
