--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,7 @@ body {
     header {
         width: 100%;
         height: 50vh;
+        padding-right: 10px;
         background-color: #665fee;
         background: linear-gradient(45deg, #665fee 0%, #27c2de 100%);
         clip-path: polygon(0 0, 100% 0%, 260% 35%, 0 88%);
@@ -79,11 +80,14 @@ body {
     }
 
         main {
+            width: 100%;
+            height: 100%;
+            margin-top: -40px;
             display: flex;
             flex-direction: column;
 
             .main-text {
-                margin: 10px 20px;
+                padding: 30px;
 
                 h2 {
                     font-size: 1.3em;
@@ -105,15 +109,14 @@ body {
             .main-form {
                 display: flex;
                 justify-content: center;
-                height: 50vh;
                 margin: 20px 20px;
 
                 form {
                     display: flex;
                     flex-direction: column;
-                    width: 362px;
-                    height: 260px;
-                    padding: 20px;
+                    width: 80%;
+                    height: 325px;
+                    padding: 10px;
                     background-color: white;
                     box-shadow: 0px 4px 16px 0px #00000029;
 
@@ -121,15 +124,58 @@ body {
                         font-size: 1.3em;
                         color: grey;
                         text-align: center;
+                        margin-bottom: 11px;
                     }
 
                     input {
-                        
+                        font-family: 'Montserrat';
+                        background-color: rgb(223, 223, 223);
+                        box-shadow: 0px 2px 10px 0px #00000029;
+                        border: none;
+                        padding: 6px;
+                        border-radius: 2px;
+
                     }
-                    label {
-                        font-family: 'Open Sans';
+
+                    select {
+                        font-family: 'Montserrat';
+                        background-color: rgb(223, 223, 223);
+                        box-shadow: 0px 2px 10px 0px #00000029;
+                        border: none;
+                        padding: 6px;
+                        border-radius: 2px;
+                    }
+
+
+                    button {
+                        border: none;
+                        background-color: #1d82ff;
+                        color: white;
+                        font-family: 'Montserrat';
+                        font-size: 0.9em;
+                        border-radius: 20px;
+                        box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+                        margin-top: 35px;
+                        padding: 8px;
                     }
                 }
-            }
+        }
 }
 
+@media (min-width: 320px) and (max-width: 375px) {
+    body {
+        header {
+            height: 100vh;
+            clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+        }
+    }
+}
+
+@media (min-width: 425px) and (max-width: 768px) {
+    body {
+        header {
+            height: 75vh;
+            clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+        }
+    }
+}
