--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,8 @@ body header .header-nav nav li a {
 }
 
 body main {
-  width: 100%;
   height: 100%;
-  margin-top: -40px;
+  margin-top: -50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,7 +115,7 @@ body main .main-text {
 }
 
 body main .main-text h2 {
-  font-size: 1.3em;
+  font-size: 1.2em;
   color: grey;
 }
 
@@ -167,7 +166,7 @@ body main .main-form form h2 {
 
 body main .main-form form input {
   font-family: 'Montserrat';
-  background-color: #dfdfdf;
+  background-color: #ededed;
   -webkit-box-shadow: 0px 2px 10px 0px #00000029;
           box-shadow: 0px 2px 10px 0px #00000029;
   border: none;
@@ -177,7 +176,7 @@ body main .main-form form input {
 
 body main .main-form form select {
   font-family: 'Montserrat';
-  background-color: #dfdfdf;
+  background-color: #ededed;
   -webkit-box-shadow: 0px 2px 10px 0px #00000029;
           box-shadow: 0px 2px 10px 0px #00000029;
   border: none;
@@ -205,6 +204,31 @@ body main .main-form form button:hover {
           box-shadow: 0px 3px 11px 0px #2833cefb;
 }
 
+/* PRODUCT SECTION */
+section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100vh;
+  margin-top: 50px;
+  padding: 30px;
+  background-color: #ededed;
+  -webkit-clip-path: polygon(0 0, 100% 0%, 270% 40%, 0 95%);
+          clip-path: polygon(0 0, 100% 0%, 270% 40%, 0 95%);
+}
+
+section h2 {
+  font-size: 1.1em;
+  color: #525252;
+}
+
+section i {
+  color: #27c2de;
+  margin: 4px 6px;
+  font-size: 1em;
+}
+
+/* MEDIA QUERIES */
 @media (min-width: 320px) and (max-width: 375px) {
   body header {
     height: 80vh;
