--- a/css/style.scss
+++ b/css/style.scss
@@ -80,25 +80,24 @@ body {
         }
     }
 
-        /* MAIN */
-        main {
-            width: 100%;
-            height: 100%;
-            margin-top: -40px;
-            display: flex;
-            flex-direction: column;
+    /* MAIN */
+    main {
+        height: 100%;
+        margin-top: -50px;
+        display: flex;
+        flex-direction: column;
 
-            .main-text {
-                padding: 30px;
+        .main-text {
+            padding: 30px;
 
-                h2 {
-                    font-size: 1.3em;
-                    color: grey;
-                        i {
-                            color: #27c2de;
-                            margin: 8px;
-                        }
+            h2 {
+                font-size: 1.2em;
+                color: grey;
+                i {
+                        color: #27c2de;
+                        margin: 8px;
                 }
+            }
                 p {
                     font-family: 'Open Sans';
                     font-size: 0.9em;
@@ -107,72 +106,93 @@ body {
                 }
             }
 
-            .main-form {
+        .main-form {
+            display: flex;
+            justify-content: center;
+            margin: 20px 20px;
+
+            form {
                 display: flex;
-                justify-content: center;
-                margin: 20px 20px;
+                flex-direction: column;
+                width: 80%;
+                height: 325px;
+                padding: 10px;
+                background-color: white;
+                box-shadow: 0px 4px 16px 0px #00000029;
 
-                form {
-                    display: flex;
-                    flex-direction: column;
-                    width: 80%;
-                    height: 325px;
-                    padding: 10px;
-                    background-color: white;
-                    box-shadow: 0px 4px 16px 0px #00000029;
+                h2 {
+                    font-size: 1.3em;
+                    color: grey;
+                    text-align: center;
+                    margin-bottom: 11px;                    
+                }
 
-                    h2 {
-                        font-size: 1.3em;
-                        color: grey;
-                        text-align: center;
-                        margin-bottom: 11px;
-                    }
+                input {
+                    font-family: 'Montserrat';
+                    background-color: #ededed;
+                    box-shadow: 0px 2px 10px 0px #00000029;
+                    border: none;
+                    padding: 6px;
+                    border-radius: 2px;
+                }
 
-                    input {
-                        font-family: 'Montserrat';
-                        background-color: rgb(223, 223, 223);
-                        box-shadow: 0px 2px 10px 0px #00000029;
-                        border: none;
-                        padding: 6px;
-                        border-radius: 2px;
-
-                    }
-
-                    select {
-                        font-family: 'Montserrat';
-                        background-color: rgb(223, 223, 223);
-                        box-shadow: 0px 2px 10px 0px #00000029;
-                        border: none;
-                        padding: 6px;
-                        border-radius: 2px;
-                    }
+                select {
+                    font-family: 'Montserrat';
+                    background-color: #ededed;
+                    box-shadow: 0px 2px 10px 0px #00000029;
+                    border: none;
+                    padding: 6px;
+                    border-radius: 2px;
+                }
 
 
-                    button {
-                        border: none;
-                        background-color: #1d82ff;
-                        color: white;
-                        font-family: 'Montserrat';
-                        font-size: 0.9em;
-                        border-radius: 20px;
-                        box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
-                        margin-top: 35px;
-                        padding: 8px;
-                        cursor: pointer;
+                button {
+                    border: none;
+                    background-color: #1d82ff;
+                    color: white;
+                    font-family: 'Montserrat';
+                    font-size: 0.9em;
+                    border-radius: 20px;
+                    box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+                    margin-top: 35px;
+                    padding: 8px;
+                    cursor: pointer;
 
-
-                        &:hover {
-                            background-color: #2833cefb;
-                            box-shadow: 0px 3px 11px 0px #2833cefb;
-                        }
+                    &:hover {
+                        background-color: #2833cefb;
+                        box-shadow: 0px 3px 11px 0px #2833cefb;
                     }
                 }
+            }
         }
     }
 }
 
+    /* PRODUCT SECTION */
+    section {
+        display: flex;
+        height: 100vh;
+        margin-top: 50px;
+        padding: 30px;
+        background-color: #ededed;
+        clip-path: polygon(0 0, 100% 0%, 270% 40%, 0 95%);
+
+        h2 {
+            font-size: 1.1em;
+            color: #525252;
+        }
+        i {
+            color: #27c2de;
+            margin: 4px 6px;
+            font-size: 1em;
+        }
+    }
 
 
+
+
+
+/* MEDIA QUERIES */
 @media (min-width: 320px) and (max-width: 375px) {
     body {
         header {
