--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body main .main-form form button:hover {
 }
 
 /* PRODUCT SECTION */
-section {
+#productSection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -217,15 +217,133 @@ section {
           clip-path: polygon(0 0, 100% 0%, 270% 40%, 0 95%);
 }
 
-section h2 {
+#productSection h2 {
   font-size: 1.1em;
   color: #525252;
 }
 
-section i {
+#productSection i {
   color: #27c2de;
   margin: 4px 6px;
   font-size: 1em;
+}
+
+/* SHARE SECTION */
+#shareSection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+  padding: 30px;
+  background-color: white;
+}
+
+#shareSection .section-text h2 {
+  font-size: 1.1em;
+  color: grey;
+}
+
+#shareSection .section-text h2 i {
+  color: #27c2de;
+  margin: 8px;
+}
+
+#shareSection .section-text p {
+  font-family: 'Open Sans';
+  font-size: 0.9em;
+  margin-top: 5px;
+  color: #a1a1a1;
+}
+
+#shareSection .section-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 60px;
+}
+
+#shareSection .section-form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 70vw;
+  height: 50vh;
+  padding: 20px;
+  background-color: white;
+  -webkit-box-shadow: 0px 4px 16px 0px #00000029;
+          box-shadow: 0px 4px 16px 0px #00000029;
+}
+
+#shareSection .section-form form h2 {
+  font-size: 1.1em;
+  color: grey;
+  text-align: center;
+  margin-top: -20px;
+  margin-bottom: 40px;
+}
+
+#shareSection .section-form form label {
+  font-size: 0.9em;
+  font-family: 'Open Sans';
+  color: darkslategray;
+}
+
+#shareSection .section-form form input {
+  background-color: #ededed;
+  -webkit-box-shadow: 0px 2px 10px 0px #00000029;
+          box-shadow: 0px 2px 10px 0px #00000029;
+  border: none;
+  padding: 6px;
+  border-radius: 2px;
+}
+
+#shareSection .section-form form button {
+  border: none;
+  background-color: #1d82ff;
+  color: white;
+  font-family: 'Montserrat';
+  font-size: 0.9em;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+          box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+  margin-top: 20px;
+  margin-bottom: -20px;
+  padding: 8px;
+  cursor: pointer;
+}
+
+#shareSection .section-form form button:hover {
+  background-color: #2833cefb;
+  -webkit-box-shadow: 0px 3px 11px 0px #2833cefb;
+          box-shadow: 0px 3px 11px 0px #2833cefb;
+}
+
+footer {
+  padding-top: 65px;
+  background-color: #ededed;
+  -webkit-clip-path: polygon(0 50%, 100% 0%, 100% 100%, 0% 100%);
+          clip-path: polygon(0 50%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+footer p {
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 0.7em;
+  color: darkslategray;
 }
 
 /* MEDIA QUERIES */
