--- a/css/style.scss
+++ b/css/style.scss
@@ -295,6 +295,15 @@ body {
     }
 }
 
+@media (width: 375px) {
+    body {
+        header {
+            height: 65vh;
+            clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+        }
+    }
+}
+
 @media (min-width: 425px) and (max-width: 768px) {
     body {
         header {
