--- a/css/style.scss
+++ b/css/style.scss
@@ -287,6 +287,7 @@ body {
 
 
 /* MEDIA QUERIES */
+
 @media (min-width: 320px) and (max-width: 375px) {
     body {
         header {
@@ -310,6 +311,71 @@ body {
         header {
             height: 60vh;
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+        }
+    }
+}
+
+@media (min-width: 769px) {
+    body {
+        header {
+            height: 40vh;
+
+            .header-nav {
+                nav {
+                    li {
+                        margin-right: 6px;
+                    }
+                }
+            }
+        }
+
+        main {
+            justify-content: space-between;
+            flex-direction: row;
+            margin: 20px 80px;
+
+            .main-text {
+                width: 45vw;
+                word-break: break-word;
+                
+            }
+
+            .main-form {
+                width: 35vw;
+            }
+        }
+
+        #productSection {
+            padding: 30px 105px;
+        }
+
+        #shareSection {
+            height: 60vh;
+            margin: 20px 80px;
+
+            .section-form {
+                margin-top: 50px;
+
+                form {
+                    display: inline-flex;
+                    text-align: start;
+                    height: 45vh;
+                    width: 40vw;
+
+                    h2 {
+                        text-align: center;
+                    }
+
+                    input {
+                        height: 30px;
+                    }
+
+                    button {
+                        width: 50%;
+                        align-self: center;
+                    }
+                }
+            }
         }
     }
 }
