--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body main .main-form form button:hover {
 
 /* PRODUCT SECTION */
 #productSection {
-  height: 1750px;
+  height: 2380px;
   margin-top: 50px;
   padding: 30px;
   background-color: white;
@@ -238,6 +238,7 @@ body main .main-form form button:hover {
           align-items: center;
   width: 55vw;
   height: 250px;
+  padding: 0px 10px;
   margin: 0 auto;
   margin-bottom: 20px;
   -webkit-box-shadow: 0px 4px 16px 0px #00000029;
@@ -300,6 +301,30 @@ body main .main-form form button:hover {
   height: 180px;
   padding: 15px;
   background-color: red;
+}
+
+#productSection .divNextPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 35px;
+}
+
+#productSection .divNextPage #buttonNextPage {
+  border: none;
+  background-color: #1d82ffb5;
+  color: white;
+  font-family: 'Montserrat';
+  font-size: 0.8em;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+          box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
+  margin-top: 5px;
+  padding: 10px 50px;
+  cursor: pointer;
 }
 
 /* SHARE SECTION */
