--- a/css/style.scss
+++ b/css/style.scss
@@ -232,23 +232,13 @@ body {
                 cursor: pointer;
             }
 
-            #installmentButton {
+            .installmentButton {
                 border: none;
                 background: transparent;
                 align-self: flex-end;
                 margin-right: 15px;
                 cursor: pointer;
             }
-        }
-        #installmentDiv {
-            position: fixed;
-            display: none;
-            top: 0; bottom: 0; left: 0; right: 0;
-            margin: auto;
-            width: 200px;
-            height: 180px;
-            padding: 15px;
-            background-color: red;
         }
     }
 
@@ -269,6 +259,16 @@ body {
             padding: 10px 50px;
             cursor: pointer;
         }
+    }
+    #installmentDiv {
+        position: fixed;
+        display: none;
+        top: 0; bottom: 0; left: 0; right: 0;
+        margin: auto;
+        width: 200px;
+        height: 180px;
+        padding: 15px;
+        background-color: red;
     }
 }
 
