--- a/css/style.scss
+++ b/css/style.scss
@@ -160,15 +160,17 @@ body {
                     font-size: 0.9em;
                     border-radius: 20px;
                     box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
-                    margin-top: 35px;
+                    margin-top: 40px;
                     padding: 8px;
                     cursor: pointer;
+                    transition: 1s ease-in-out;
 
                     &:hover {
-                        background-color: #2833cefb;
-                        box-shadow: 0px 3px 11px 0px #2833cefb;
+                        transition: 0.5s ease-in-out;
+                        background: #1d82ffb5;
+                        box-shadow: 0px 3px 11px 0px #1d82ffb5;
                     }
-                }
+                } 
             }
         }
     }
@@ -255,20 +257,27 @@ body {
         justify-content: center;
         margin-top: 35px;
 
-        #buttonNextPage {
+
+        button {
             border: none;
             background-color: #1d82ffb5;
             color: white;
             font-family: 'Montserrat';
-            font-size: 0.8em;
+            font-size: 0.9em;
             border-radius: 20px;
             box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
-            margin-top: 5px;
-            padding: 10px 50px;
+            margin-top: 45px;
+            padding: 8px;
             cursor: pointer;
-        }
-    }
+            transition: 1s ease-in-out;
 
+            &:hover {
+                transition: 0.5s ease-in-out;
+                background: #1d82ff;
+                box-shadow: 0px 3px 11px 0px #1d82ffb5;
+            }
+        }
+    } 
 }
 
 
@@ -340,7 +349,7 @@ body {
                     border: 1px solid red;
                     box-shadow: 0px 2px 5px 0px #ff00004f;
                 }
-                
+
                 button {
                     border: none;
                     background-color: #1d82ff;
@@ -353,14 +362,16 @@ body {
                     margin-bottom: -20px;
                     padding: 8px;
                     cursor: pointer;
+                    transition: 1s ease-in-out;
 
                     &:hover {
-                        background-color: #2833cefb;
-                        box-shadow: 0px 3px 11px 0px #2833cefb;
-                    }
+                        transition: 0.5s ease-in-out;
+                        background: #1d82ffb5;
+                        box-shadow: 0px 3px 11px 0px #1d82ffb5;
                 }
-            }
+            } 
         }
+    }
 }
 
     footer {
@@ -382,7 +393,7 @@ body {
 @media (min-width: 320px) and (max-width: 375px) {
     body {
         header {
-            height: 50vh;
+            height: 80vh;
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
         }
     }
@@ -391,7 +402,7 @@ body {
 @media (width: 375px) {
     body {
         header {
-            height: 50vh;
+            height: 60vh;
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
         }
     }
@@ -400,7 +411,7 @@ body {
 @media (min-width: 425px) and (max-width: 768px) {
     body {
         header {
-            height: 50vh;
+            height: 60vh;
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
         }
     }
@@ -437,8 +448,33 @@ body {
         }
 
         #productSection {
-            padding: 30px 105px;
+            margin: 20px 60px;
+            height: 850px;
+
+            h2{ 
+                margin-bottom: 40px;
+            }
+
+            #productsContainer {
+                display: grid;
+                grid-template-columns: 200px 200px 200px 200px;
+                justify-content: space-around;
+
+                .productDiv {
+                    width: 260px;
+                }
+            }
+            .divNextPage {
+                #buttonNextPage {
+                    margin-top: 15px;
+                    padding: 9px 72px;
+                    font-size: 0.9em;
+                }
+            }
         }
+
+        
+        
 
         #shareSection {
             height: 60vh;
